--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp-rename": ">=1.2.2",
     "gulp-rev": ">=4.0.0",
     "gulp-rev-replace": ">=0.4.1",
+    "gulp-rsync": "0.0.5",
     "run-sequence": ">=1.1.0"
   },
   "scripts": {
